A BOM one workspace member holds constrains that member's rows and its dependents' — the workspace's rows are solved under the BOMs every member holds, the root's and any every member declares, a versionless root under a member-only BOM takes that BOM's version, and a BOM's table keeps its declaration order so two BOMs' disagreements are reported in it — so the quarkus plugin's bootstrap BOM writes rows with members = ["plugins/quarkus"] beside unchanged plain rows instead of moving thirty-three plain rows and partitioning every other member